--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
-h1{
+div{
     color: red;
     font-size: 35px;
     background-color: greenyellow;
     border: 5px solid blue;
     padding: 10px;
     margin: 10px;
+    height: 300px;
+    width: 350px;
 }
